<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.spearline.webrtc.MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/spearline_logo" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:cardBackgroundColor="@color/color_grey_color"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:elevation="8dp"
                android:text="@string/lbl_spearline_webrtc_demo"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/meeting_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/curve_background"
                android:backgroundTint="@color/white"
                android:hint="@string/lbl_enter_meeting_id"
                android:padding="16dp"
                android:textColor="@color/color_grey_color"
                android:text="test"
                tools:text="ABC text" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioClient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:checked="true"
                    android:text="@string/lbl_client"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radioServer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:checked="false"
                    android:text="@string/lbl_server"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/start_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/lbl_start_call"
                    android:textAllCaps="false"
                    android:textColor="@color/color_grey_color"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="8dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/join_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/lbl_join_call"
                    android:textAllCaps="false"
                    android:textColor="@color/color_grey_color"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="8dp" />
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logsButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="View logs"
        />

    <TextView
        android:id="@+id/logs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@color/black"
        android:textColor="@color/white"
        />

</LinearLayout>